--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng-packagr": "^3.0.1",
     "popper.js": "^1.14.3",
     "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
